last changes + add ionic view

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -58,7 +58,7 @@
         <interests></interests>
       </div>
       <div class="segment-wrapper" *ngSwitchCase="'networks'">
-        <h2>Networks</h2>
+        <networks></networks>
       </div>
     </div>
   </div>
