--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     }
   </script>-->
 
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBtwwT2E5TqCePXRC-e4ikSRxYwPpuHhh0&language=en"></script>
+
   <link href="build/main.css" rel="stylesheet">
 
 </head>
