--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <button menuToggle ion-button icon-only right>
+    <button menuToggle ion-button icon-only>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Profile</ion-title>
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div class="profile-header">
-    <div class="profile-page-image">
+    <div class="profile-image">
       <img src="https://s3.amazonaws.com/ionic-io-static/9TxJELnATnW9H3MZZfdG_Profile_avatar_placeholder_large.png"
            width="30%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
     </div>
