--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -24,7 +24,7 @@
       <image-upload [icon]="'pencil'" (outputImg)="getImgSrc($event)"></image-upload>
     </div>
     <div class="profile-image">
-      <img [src]="userAvatar" width="110" height="110" style="display: block; margin-left: auto; margin-right: auto;">
+      <img class="picture" [src]="userAvatar" width="110" height="110" style="display: block; margin-left: auto; margin-right: auto;">
     </div>
   </div>
   <div class="profile-page-content">
