--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -11,10 +11,10 @@
   <ion-card *ngFor="let task of listTasks">
     <ion-card-content (click)="goToDetail(task)">
       <ion-row>
-        <ion-col>
+        <ion-col no-padding>
           <h5>{{task.campaign}}</h5>
         </ion-col>
-        <ion-col text-right>
+        <ion-col text-right no-padding>
           <p>{{task.due_date}}</p>
         </ion-col>
       </ion-row>
