--- a/src/pages/auth/login/login.html
+++ b/src/pages/auth/login/login.html
@@ -1,24 +1,29 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
 <ion-content padding>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
-    <ion-list>
-      <ion-item>
-        <!--<ion-label>Label</ion-label>-->
-        <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
-      </ion-item>
-    </ion-list>
-    <div padding>
-      <button ion-button block [disabled]="!form.valid">Log in</button>
-    </div>
-    <a class="btn btn-link" (click)="goToRegister()">Or create an account</a>
-  </form>
+  <div class="content-inner">
+    <img src="../../assets/img/logo/lineup-logo-white.svg" class="logo"/>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="auth-form">
+      <ion-list>
+        <ion-item>
+          <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
+        </ion-item>
+        <span *ngIf="formErrors && formErrors.email" class="error">
+          <span ion-text color="danger">{{ formErrors.email }}</span>
+        </span>
+        <ion-item>
+          <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
+        </ion-item>
+        <span *ngIf="formErrors && formErrors.password" class="error">
+          <span ion-text color="danger">{{ formErrors.password }}</span>
+        </span>
+      </ion-list>
+      <button ion-button full color="danger" [disabled]="!form.valid">Log in</button>
+      <button ion-button full icon-left class="btn-social">
+        <fa-icon name="facebook"></fa-icon>
+        Log In with Facebook
+      </button>
+      <a class="btn btn-link" (click)="goToRegister()">Or create an account</a>
+    </form>
+  </div>
 </ion-content>
 
 
