--- a/src/pages/task-detail/task-detail.html
+++ b/src/pages/task-detail/task-detail.html
@@ -15,7 +15,7 @@
     <review-task *ngSwitchCase="taskType.REVIEW"></review-task>
     <aquisition-task *ngSwitchCase="taskType.AQUISITION"></aquisition-task>
     <create-task *ngSwitchCase="taskType.CREATE"></create-task>
+    <poll-survey-task *ngSwitchCase="taskType.POLLSURVEY"></poll-survey-task>
     <!--<trial-test-task *ngSwitchCase="taskTypes.TRIALTEST" [task]="item" [isSubmit]="isSubmit"></trial-test-task>-->
-    <!--<poll-survey-task *ngSwitchCase="taskTypes.POLLSURVEY" [task]="item" [isSubmit]="isSubmit"></poll-survey-task>-->
   </div>
 </ion-content>
