--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -68,7 +68,7 @@
           </ion-card-content>
         </ion-card>
         <!-- Transparency Policy -->
-        <ion-card class="transparency-policy">
+        <ion-card class="transparency-policy" *ngIf="false">
           <ion-card-content>
             <h4>Transparency Policy</h4>
             <p>Share as much (or as little) information as you’d like - we will only share
