--- a/src/pages/auth/forgot-password/forgot-password.html
+++ b/src/pages/auth/forgot-password/forgot-password.html
@@ -1,12 +1,22 @@
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Forgot Password</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
+  <div class="content-inner">
+    <h2 class="color-white">Forgot Password</h2>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" *ngIf="showForm" class="auth-form">
+      <ion-list>
+        <ion-item>
+          <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
+        </ion-item>
+        <span *ngIf="formErrors && formErrors.email" class="error">
+          <span ion-text color="danger">{{ formErrors.email }}</span>
+        </span>
+        <a class="btn btn-link forgot text-right" (click)="goToLogin()">Back to login</a>
+      </ion-list>
+      <button [disabled]="!form.valid" ion-button full color="danger" type="submit">Send</button>
+    </form>
+    <div class="info-message" *ngIf="!showForm">
+      <h4>Successful!</h4>
+      <p>You should now receive the email with further instructions.</p>
+    </div>
+  </div>
 </ion-content>
+
