add last general changes

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   </script>-->
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBtwwT2E5TqCePXRC-e4ikSRxYwPpuHhh0&language=en"></script>
-
+  <!--<script src="https://checkout.stripe.com/checkout.js"></script>-->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
@@ -45,3 +45,8 @@
 
 </body>
 </html>
+
+<!--Stripe-->
+<!--http://www.carlrippon.com/?p=645-->
+<!--https://www.npmjs.com/package/ngx-stripe-->
+<!--http://blog.mgechev.com/2016/07/05/using-stripe-payment-with-angular-2/-->
