add last general changes

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -46,8 +46,7 @@
     <div [ngSwitch]="segment">
       <div class="segment-wrapper" *ngSwitchCase="'info'">
         <!-- Profile Strength -->
-        <ion-card class="profile-strength" *ngIf="!
-        registerCompletion">
+        <ion-card class="profile-strength" *ngIf="!registerCompletion">
           <ion-card-content>
             <div class="strength-chart">
               <canvas baseChart
