--- a/src/pages/insights/insights.html
+++ b/src/pages/insights/insights.html
@@ -21,34 +21,34 @@
       </ion-segment-button>
     </ion-segment>
   </div>
-  <ion-card class="overview-section">
-    <ion-card-header>
-      <h4 float-left>Overview</h4>
-      <span class="card-date" text-right>18.09.2017</span>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-slides pager>
-        <ion-slide *ngFor="let item of overviewData;" class="slide">
-          <h2>{{item.data}}</h2>
-          <p>{{item.title}}</p>
-        </ion-slide>
-      </ion-slides>
-    </ion-card-content>
-  </ion-card>
-  <div class="chart-section">
-    <div class="audience">
-      <div class="header">
-        <h4 float-left>Audience Growth</h4>
-        <span class="card-date" text-right>18.09.2017</span>
-      </div>
-      <div class="chart">
-        <canvas baseChart
-                [data]="lineChartData"
-                [labels]="lineChartLabels"
-                [chartType]="'lineChartType'"
-                [colors]="lineChartColors"></canvas>
-      </div>
-    </div>
-
-  </div>
+  <h4 text-center>Coming Soon</h4>
+  <!--<ion-card class="overview-section">-->
+    <!--<ion-card-header>-->
+      <!--<h4 float-left>Overview</h4>-->
+      <!--<span class="card-date" text-right>18.09.2017</span>-->
+    <!--</ion-card-header>-->
+    <!--<ion-card-content>-->
+      <!--<ion-slides pager>-->
+        <!--<ion-slide *ngFor="let item of overviewData;" class="slide">-->
+          <!--<h2>{{item.data}}</h2>-->
+          <!--<p>{{item.title}}</p>-->
+        <!--</ion-slide>-->
+      <!--</ion-slides>-->
+    <!--</ion-card-content>-->
+  <!--</ion-card>-->
+  <!--<div class="chart-section">-->
+    <!--<div class="audience">-->
+      <!--<div class="header">-->
+        <!--<h4 float-left>Audience Growth</h4>-->
+        <!--<span class="card-date" text-right>18.09.2017</span>-->
+      <!--</div>-->
+      <!--<div class="chart">-->
+        <!--<canvas baseChart-->
+                <!--[data]="lineChartData"-->
+                <!--[labels]="lineChartLabels"-->
+                <!--[chartType]="'lineChartType'"-->
+                <!--[colors]="lineChartColors"></canvas>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 </ion-content>
